# gh6

./: AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  README_EN.md  TODO.md  com.gh6.daemon.plist  gh6d.service  install.sh
migrations/: 001_init.sql  002_defer_hub_scopes.sql  002_priority.sql
src/: analyze.rs  db.rs  display.rs  github.rs  lib.rs  main.rs  server.rs  tui.rs  types.rs
src/crawlers/: mod.rs
src/db/: mod.rs
src/db/migrations/: 001_init.sql
