[package]
name = "gh6"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
owo-colors = "4"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["clock"] }
unicode-width = "0.2"
indicatif = "0.17"
ratatui = "0.29"
crossterm = "0.28"
